# Black-Hole-Sim

./: .gitignore  CMakeLists.txt  README.md
app/: bh_cpu.cpp  sfml-app
experiments/: blackhole  raytrace.frag  raytrace2.frag  rk4_manual  rk4_manual.cpp  sfml-app  shader  shader-debug  shader_demo  temp.cpp  test2d.cpp  test2d.frag  test_cam.cpp
experiments/2d_gravity/: main.cpp  main.frag  main2.cpp  main2.frag  shader_demo
experiments/shader_ex/: main.cpp  rt.frag  shader_demo
src/: blackhole  raytrace.cpp  raytrace.frag  rk4.cpp  rk4.hpp
tests/: test_rk4.cpp
